--- a/style (2).css
+++ b/style (2).css
@@ -1,5 +1,5 @@
 .main-header{
-    background: url(../CWD-B8-PM/Final-Image/blue.jpg);
+    background: url(/CWD-B8-PM/Final-Image/blue.jpg);
     min-height: 1000px;
     background-size: cover;
     background-position: left;
